Fixed mobile styles, copy on ios, and a few others

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,15 +1,29 @@
 .app {
   display: grid;
   grid-template-areas:
-    "primary-tools header secondary-tools"
-    "primary-tools artboard secondary-tools"
-    "primary-tools footer secondary-tools";
-  grid-template-columns: 260px 1fr 260px;
-  grid-template-rows: auto 1fr auto;
-  grid-gap: 24px;
+    "header"
+    "artboard"
+    "primary-tools"
+    "secondary-tools"
+    "footer";
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  width: 100%;
   min-height: 100%;
   --bg-white: hsla(0, 0%, 100%, 0.75);
   background:
     linear-gradient(45deg, var(--bg-white) 0%, var(--bg-white) 100%),
     linear-gradient(45deg, var(--color1) 0%, var(--color3) 100%);
+}
+
+@media (min-device-width : 500px) {
+  .app {
+    grid-template-areas:
+      "primary-tools header secondary-tools"
+      "primary-tools artboard secondary-tools"
+      "primary-tools footer secondary-tools";
+    grid-template-columns: 260px 1fr 260px;
+    grid-template-rows: auto 1fr auto;
+    grid-gap: 24px;
+  }
 }
